# g03-multipurpose-qqbot

./: .gitignore  config_template.json  pyproject.toml
src/: main.py
src/g03mpqb/: __init__.py  app.py  command.py
